--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"@types/express": "^4.17.14",
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
 		"@typescript-eslint/parser": "^5.37.0",
-		"eslint": "^8.23.1",
+		"eslint": "8.2.0",
+		"eslint-config-airbnb-base": "15.0.0",
+		"eslint-plugin-import": "2.25.2",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.8.3"
 	},
