--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-	"name": "typescript-backend-boilerplate",
-	"version": "1.0.0",
-	"description": "A TypeScript back-end boilerplate.",
-	"main": "./dist/index.js",
-	"repository": "https://github.com/felipelaraujo/typescript-backend-boilerplate",
-	"author": "Felipe Araújo",
-	"license": "MIT",
-	"scripts": {
-		"dev": "ts-node-dev --respawn --ignore-watch node_modules -r dotenv/config src/index.ts",
-		"prod": "node ./dist/index.js",
-		"build": "tsc"
-	},
-	"devDependencies": {
-		"@types/express": "^4.17.14",
-		"@typescript-eslint/eslint-plugin": "^5.37.0",
-		"@typescript-eslint/parser": "^5.37.0",
-		"eslint": "8.2.0",
-		"eslint-config-airbnb-base": "15.0.0",
-		"eslint-plugin-import": "2.25.2",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^4.8.3"
-	},
-	"dependencies": {
-		"dotenv": "^16.0.2",
-		"express": "^4.18.1"
-	}
+  "name": "typescript-backend-boilerplate",
+  "version": "1.0.0",
+  "description": "A TypeScript back-end boilerplate.",
+  "main": "./dist/index.js",
+  "repository": "https://github.com/felipelaraujo/typescript-backend-boilerplate",
+  "author": "Felipe Araújo",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --ignore-watch node_modules -r dotenv/config src/index.ts",
+    "prod": "node ./dist/index.js",
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@typescript-eslint/eslint-plugin": ">=5.31.0",
+    "@typescript-eslint/parser": ">=5.31.0",
+    "eslint": ">=8.0.0",
+    "eslint-config-xo": "^0.42.0",
+    "eslint-config-xo-typescript": "^0.53.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": ">=4.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1"
+  }
 }
